Add redirects directive

--- a/templates/Caddyfile.j2
+++ b/templates/Caddyfile.j2
@@ -15,6 +15,10 @@
   }
   {% endif %}
 
+  {%- for redir in site.redirects %}
+  redir {% if redir.source is defined and redir.source %}{{ redir.source }} {% endif %}{{ redir.target }}{% if redir.code is defined and redir.code%} {{ redir.code }}{% else %} permanent{% endif %}
+  {%- endfor %}
+
   {%- for route in site.routes %}
   {% if route.strip_prefix is defined and route.strip_prefix %}
   handle_path {{ route.path }} {
