--- a/templates/Caddyfile.j2
+++ b/templates/Caddyfile.j2
@@ -15,6 +15,10 @@
   }
   {% endif %}
 
+  {%- if site.additional_template_path is defined %}
+  {% include site.additional_template_path %}
+  {%- endif %}
+
   {%- if site.redirects is defined %}
   {%- for redir in site.redirects %}
   redir {% if redir.source is defined and redir.source %}{{ redir.source }} {% endif %}{{ redir.target }}{% if redir.code is defined and redir.code%} {{ redir.code }}{% else %} permanent{% endif %}
@@ -41,7 +45,7 @@
   {% endif -%}
 }
 
-{% if (site.additional_forwarding_port is defined) and (site.additional_forwarding_ports | length > 0) %}
+{% if (site.additional_forwarding_ports is defined) and (site.additional_forwarding_ports | length > 0) %}
 {{ (["http://"] | product([site.domain]) | map("join")) | product(site.additional_forwarding_ports) | map("join", ":") | join(", ") }} {
   redir http://{{ site.domain }}{uri} permanent
 }
