--- a/templates/Caddyfile.j2
+++ b/templates/Caddyfile.j2
@@ -31,7 +31,7 @@
   {% else %}
   handle {{ route.path }} {
   {%- endif %}
-    {%- if site.allowlist is defined %}
+    {%- if site.allowlist is defined and not (route.public | default(false)) %}
     reverse_proxy @allowlist {{ route.reverse_proxy_destination }}
     respond @not_allowlist 404
     {%- else %}
