Replying 403 code and basic access forbidden content, instead of closing TCP connection

--- a/templates/Caddyfile.j2
+++ b/templates/Caddyfile.j2
@@ -13,8 +13,11 @@
   }
 
   handle @badbots {
-    abort
+      respond 403 {
+          body "Access forbidden."
+      }
   }
+
   {%- endif %}
 
   {%- if site.allowlist is defined %}
