Removing wildcard in the ansible role. Wildcards will have to be added when defining the variables

--- a/templates/Caddyfile.j2
+++ b/templates/Caddyfile.j2
@@ -8,7 +8,7 @@
   {%- if site.useragent_blocklist is defined %}
   @badbots {
     {%- for ua in site.useragent_blocklist %}
-    header User-Agent *{{ ua }}*
+    header User-Agent {{ ua }}
     {%- endfor %}
   }
 
